# AutoPuzzle

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  index.html  main.cpp  main.js  vcpkg.json
src/: ScreenCapture.cpp  ScreenCapture.h  recognition.cpp  recognition.h  utils.cpp  utils.h
